SFDC Automation/src/objects/Marketing_Project__c.object
<CustomObject>
    <description>Object to contain higher level marketing projects. MARCOM Deliverable is the object that contains the details of the project</description>
    <fields>
        <fullName>Actual_Completion_Date__c</fullName>
        <label>Actual Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Brief_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brief Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Marketing_Brief_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_to_Action__c</fullName>
        <label>Call to Action</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Campaign_Track__c</fullName>
        <label>Campaign Track</label>
        <picklist>
            <picklistValues>
                <fullName>Asset Optimization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet Think</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safety</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign_Type__c</fullName>
        <label>Campaign Type</label>
        <picklist>
            <picklistValues>
                <fullName>Demand Generation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Retention</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Communication_Objective__c</fullName>
        <label>Communication Objective</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Pre-brief Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deliverable_Medium__c</fullName>
        <label>Deliverable / Medium</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Detailed_Brief_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Detailed Brief Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_Completion_Date__c</fullName>
        <label>Estimated Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Previous_Reference__c</fullName>
        <inlineHelpText>Please provide previous stock number or reference</inlineHelpText>
        <label>Previous Reference</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previously_Executed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Previously Used or Executed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <picklist>
            <picklistValues>
                <fullName>Lease - Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease - Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Category__c</fullName>
        <label>Project Category</label>
        <picklist>
            <picklistValues>
                <fullName>Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collateral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telemarketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Automation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Days__c</fullName>
        <description>Numbers of days the project lasted or it has been opened if still open. The assumption of completion is a value in the Actual Completion Date field</description>
        <formula>if (isnull(Actual_Completion_Date__c),
(TODAY() - IF(isnull(Start_Date__c), today(), Start_Date__c)),
(Actual_Completion_Date__c - Start_Date__c + 1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <inlineHelpText>Pending Committee Approval - Submitted; awaiting approval from committee
Approved, not started
Rejected - Will not move forward
Development - Developing content
Routing for Approval - Sent to approvers
Cancelled - Will not move forward
Completed</inlineHelpText>
        <label>Project Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted / Upcoming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Committee Approval</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved. Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Routing for Approvals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Track__c</fullName>
        <inlineHelpText>Fast Track is used for repurpose, update or modify projects
New Project is used when a brief is required. It requires review and prioritization</inlineHelpText>
        <label>Project Track</label>
        <picklist>
            <picklistValues>
                <fullName>Simple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comprehensive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requested_Launch_Date__c</fullName>
        <label>Requested Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Audience__c</fullName>
        <label>Target Audience</label>
        <type>TextArea</type>
    </fields>
    <label>Marketing Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Project_Name__c</columns>
        <columns>Communication_Objective__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Project_Status__c</columns>
        <columns>Project_Track__c</columns>
        <columns>Deliverable_Medium__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Projects</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Project_Name__c</columns>
        <columns>Communication_Objective__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Project_Status__c</columns>
        <columns>Project_Track__c</columns>
        <columns>Deliverable_Medium__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Projects</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>MARCOM Project Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>